--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,26 @@ body {
     font-style: normal;
 }
 
+.dela-gothic-one-regular {
+    font-family: "Dela Gothic One", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
+  
+.mochiy-pop-one-regular {
+    font-family: "Mochiy Pop One", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
+  
+.mochiy-pop-p-one-regular {
+    font-family: "Mochiy Pop P One", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
+  
+
+
 .font {
     font-family: Arial, Helvetica, sans-serif;
     font-style: normal;
@@ -106,10 +126,10 @@ body {
 
 
 .cart-btn {
-    width: 72px;
-    height: 72px;
+    width: 64px;
+    height: 64px;
     margin: 0 16px 0 auto;
-    padding: 0;
+    padding: 4px 0 4px 8px;
     border-radius: 8px;
     background-color: #ffffff;
     display: flex;
