--- a/css/style.css
+++ b/css/style.css
@@ -15,28 +15,23 @@ body {
 .rampart-one-regular {
     font-family: "Rampart One", sans-serif;
     font-style: normal;
+    text-shadow: 6px 8px 6px rgb(124, 124, 124);
 }
 
-.dela-gothic-one-regular {
-    font-family: "Dela Gothic One", sans-serif;
-    font-weight: 400;
+.dotgothic16-regular {
+    font-family: "DotGothic16", sans-serif;
+    font-weight: 900;
     font-style: normal;
+    text-shadow: 3px 3px 3px rgba(117, 117, 117, 0.836);
 }
-  
-.mochiy-pop-one-regular {
-    font-family: "Mochiy Pop One", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-}
-  
-.mochiy-pop-p-one-regular {
-    font-family: "Mochiy Pop P One", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-}
-  
 
-
+.shippori-antique-regular {
+    font-family: "Shippori Antique", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    text-shadow: 4px 4px 4px rgba(131, 131, 131, 0.842);
+}
+    
 .font {
     font-family: Arial, Helvetica, sans-serif;
     font-style: normal;
