--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@ body {
     font-family: "Shippori Antique", sans-serif;
     font-weight: 400;
     font-style: normal;
-    text-shadow: 2px 2px 2px rgba(131, 131, 131, 0.842);
+    text-shadow: 3px 3px 4px rgba(131, 131, 131, 0.842);
 }
     
 .font {
@@ -229,6 +229,7 @@ body {
     letter-spacing: 0.05em;
     padding: 0 1dvw 0 0;
     margin: 0;
+    text-shadow: 2px 2px rgb(126, 126, 126);
 }
 
 .menu .en {
@@ -236,6 +237,7 @@ body {
     font-size: 20px;
     padding: 0;
     margin: auto 4px 10px;
+    text-shadow: 2px 2px 4px rgb(126, 126, 126);
 }
 
 
