--- a/css/style.css
+++ b/css/style.css
@@ -33,8 +33,36 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
+    background-image: url(../img/BGwood5.jpg);
+    background-size: cover;
+    background-position: 0 50%;
+    background-repeat: no-repeat;
     z-index: -1;
     overflow: hidden;
+}
+
+.left, .up, .down, .right {
+    font-size: 32px;
+}
+
+.left {
+    transform: rotate(-90deg);
+}
+
+.down {
+    transform: rotate(180deg);
+}
+
+.right {
+    transform: rotate(90deg);
+}
+
+#no9 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 14px;
+    padding: 0;
 }
 
 /* top */
@@ -189,6 +217,7 @@ body {
     padding-top: 8px;
     padding-bottom: 8px;
 
+    user-select: none;
     cursor: pointer;
     white-space: nowrap;
     z-index: 5;
@@ -254,6 +283,36 @@ body {
 .main .rightGoBtn {
     right: 0;
     padding: 4px 0 4px 8px;
+}
+
+.menu .cart-in-animation {
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    width: 150px;
+    height: 300px;
+    padding: 0;
+    margin: 0;
+    border-radius: 4px;
+    background-color: #ffffff;
+    outline: 2px solid rgb(255, 0, 0);
+
+    opacity: 0;
+    transition: opacity 0.5s ease-in-out;
+    z-index: -15;
+}
+
+.cart-in-animation img {
+    width: 150px;
+    height: 300px;
+}
+
+.menu .cart-in-animation.fade-in {
+    opacity: 0.9 !important;
+}
+
+.menu .cart-in-animation.fade-out {
+    opacity: 0 !important;
 }
 
 
