--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,18 @@
 @charset "utf-8";
 
 html, body {
+    height: 100dvh;
+    /* padding: 16px 0 0 0; */
     padding: 0;
     margin: 0;
+    overflow-y: hidden;
 }
 
 body {
     position: relative;
-    height: 100dvh;
+    top: 0;
+    left: 0;
+    /* height: 100dvh; */
     overflow: hidden;
     user-select: none;
 }
@@ -33,10 +38,13 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url(../img/BGwood5.jpg);
-    background-size: cover;
-    background-position: 0 50%;
-    background-repeat: no-repeat;
+    background-image: url(../img/BGwood1.jpg);
+    /* background-size: cover; */
+    background-size: auto;
+    /* background-position: 0 50%; */
+    background-position: left top;
+    /* background-repeat: no-repeat; */
+    background-repeat: repeat-x;
     z-index: -1;
     overflow: hidden;
 }
@@ -79,6 +87,171 @@ body {
 }
 
 
+/* cart */
+
+.in-cart {
+    width: 90dvw;
+    height: 90dvh;
+    position: absolute;
+    top: 2dvh;
+    left: 4dvw;
+    border-radius: 8px;
+    margin: 0;
+    padding: 4px;
+    background-color: rgba(255, 255, 255, 0.95);
+    z-index: 21;
+    transform: translateY(-110dvh);
+    transition: transform .2s ease-out;
+}
+
+.overlay-area {
+    width: 100dvw;
+    height: 100dvh;
+    position: absolute;
+    padding-bottom: 5dvh;
+    top: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 20;
+    transform: translateY(-110dvh);
+    transition: transform .2s ease-out;
+}
+
+.in-cart.appear, .overlay-area.appear {
+    transform: none;
+}
+
+.inCart-topArea {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    height: 48px;
+    width: 332px;
+}
+
+.inCart-display, .hide-btn {
+    display: flex;
+    align-items: center;
+}
+
+.inCart-display {
+    justify-content: end;
+    height: 32px;
+    padding: 0 8px;
+    background-color: #7c7c7c;
+    border-radius: 8px;
+}
+
+.inCart-en, .inCart-ko, .inCart-btn {
+    margin: 0;
+    background-color: rgba(185, 185, 185, 0.85);
+    box-shadow: 4px 4px rgba(0, 0, 0, 0.5);
+}
+
+.inCart-en {
+    width: 120px;
+}
+
+.inCart-ko {
+    width: 40px;
+}
+
+.inCart-btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 48px;
+    width: 64px;
+    border-radius: 8px;
+}
+
+.inCart-btn img {
+    margin-left: 4px;
+}
+
+.hide-btn {
+    justify-content: center;
+    width: 36px;
+    height: 36px;
+    font-size: 24px;
+    color: #fff;
+    background-color: rgba(0, 0, 0, 0.75);
+    border-radius: 4px;
+    margin: 4px 0 0 4px;
+}
+
+
+
+.in-cart-container ul {
+    list-style: none;
+    margin: 16px 0 0 0;
+    padding: 0 4px 0 0;
+    /* display: flex; */
+    display: grid;
+    justify-content: center;
+}
+
+.in-cart-container ul li {
+    display: flex;
+    align-items: center;
+    justify-content: start;
+    height: 28px;
+    width: 320px;
+}
+
+.in-cart-container li + li {
+    margin-top: 16px;
+}
+
+.cart-span, .cart-num, .delete-btn {
+    display: flex;
+    align-items: center;
+    justify-content: start;
+    height: 24px;
+    padding: 4px;
+    box-shadow: 4px 4px rgba(90, 90, 90, 0.75);
+    border-radius: 4px;
+    font-size: 20px;
+    margin-left: 8px;
+    white-space: nowrap;
+}
+
+.cart-span {
+    width: 200px;
+    padding-left: 12px;
+    background-color: rgba(189, 189, 189, 0.9);
+}
+
+.cart-num {
+    justify-content: end;
+    width: 20px;
+    padding-left: 12px;
+    background-color: rgba(189, 189, 189, 0.9);
+}
+
+.delete-btn {
+    font-size: 16px;
+    width: 40px;
+    padding-left: 12px;
+    background-color: rgba(189, 189, 189, 0.9);
+}
+
+.tooltip {
+    display: none;
+    position: absolute;
+    bottom: 88%;
+    left: 50%;
+    width: 360px;
+    height: 64px;
+    transform: translateX(-50%);
+    background-color: rgba(0, 0, 0, 0.8);
+    color: #fff;
+    padding: 5px;
+    border-radius: 5px;
+    white-space: normal;
+    overflow: hidden;
+    /* white-space: nowrap; */
+}
 
 /* header */
 
@@ -115,7 +288,7 @@ body {
     font-size: 20px;
     font-weight: bold;
     display: flex;
-    width: 23dvw;
+    width: 26dvw;
     height: 5dvh;
     justify-content: center;
     align-items: center;
@@ -125,8 +298,13 @@ body {
     border-radius: 4px;
 }
 
+.en-display, .ko-display {
+    width: 12dvw;
+}
+
 .cart-price, .cart-total {
     justify-content: end;
+    width: 31dvw;
     margin: 0;
     padding: 0 8px 0 0;
     color: #ffffff;
@@ -197,6 +375,7 @@ body {
     padding: 0;
     margin: 0;
     border-radius: 8px;
+    z-index: 4;
 }
 
 .menu .text {
@@ -259,7 +438,7 @@ body {
 
 .main .leftGoBtn, .main .rightGoBtn {
     position: fixed;
-    top: 45%;
+    top: calc(15dvh + 400px);
     width: 30px;
     height: 50px;
     background-color: #000000;
@@ -321,7 +500,7 @@ body {
 
 .footer {
     width: 100dvw;
-    height: 15dvh;
+    height: 55dvh;
     padding: 0;
     margin: 0;
     background-color: rgba(133, 133, 133, 0.3);
@@ -331,7 +510,7 @@ body {
 
 .footer-container {
     width: 200dvw;
-    height: 10dvh;
+    height: 100px;
     display: flex;
 }
 
@@ -345,4 +524,56 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+
+/* デバイスごとの大まかな調整 */
+/* iPhone SE */
+@media (min-height: 690px) {
+    .main {
+        height: 70dvh;
+    }
+}
+
+/* iPhone 12 PRO */
+@media (min-height: 840px) {
+    .main {
+        height: 55dvh;
+    }
+}
+
+/* iPad Mini */
+@media (min-height: 1000px) {
+    .main {
+        height: 46dvh;
+    }
+    .menu {
+        padding-left: 5dvw;
+    }
+}
+
+/* iPad Pro */
+@media (min-height: 1300px) {
+    .main {
+        height: 40dvh;
+    }
+}
+
+/* Nest Hub */
+@media (min-width: 800px) and (max-height: 1000px) {
+    .menu {
+        padding-top: 1dvh;
+        padding-left: 5dvw;
+    }
+    .main .leftGoBtn, .main .rightGoBtn {
+        top: calc(5dvh + 400px);
+    }
+}
+
+/* Nest Hub Max */
+@media (min-width: 1200px) and (max-height: 1000px) {
+    .menu {
+        padding-top: 5dvh;
+        padding-left: 2dvw;
+    }
 }
