--- a/css/style.css
+++ b/css/style.css
@@ -244,13 +244,201 @@ body {
     width: 360px;
     height: 64px;
     transform: translateX(-50%);
-    background-color: rgba(0, 0, 0, 0.8);
+    background-color: rgba(51, 51, 51, 0.8);
     color: #fff;
     padding: 5px;
     border-radius: 5px;
     white-space: normal;
     overflow: hidden;
     /* white-space: nowrap; */
+}
+
+
+/* メニューを選んでカートに入れるまでの個数入力画面 */
+.cart-in-selection {
+    z-index: -10;
+    position: absolute;
+    top: 20%;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 300px;
+    height: 400px;
+    border-radius: 8px;
+    background-color: rgba(255, 255, 255, 0.98);
+}
+
+.cart-in-selection-overlay {
+    z-index: -11;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100dvw;
+    height: 100dvh;
+    border-radius: 8px;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.selection-style {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 8px;
+    margin: 10px auto;
+}
+
+.selection-text {
+    width: 280px;
+    height: 40px;
+    background-color: #ddd;
+    margin-top: 20px;
+}
+
+.selection-explain {
+    width: 200px;
+    height: 150px;
+    background-color: #ddd;
+    box-sizing: border-box;
+    padding: 8px;
+}
+
+.selection-container {
+    display: flex;
+    position: relative;
+}
+
+.selection-0 {
+    display: flex;
+}
+
+.selection-1 {
+    flex-direction: column;
+    flex: 4;
+    margin-left: 8px;
+    margin-bottom: 0;
+}
+
+.selection-2 {
+    flex: 1;
+    display: flex;
+    flex-direction: column-reverse;
+}
+
+.selection-3 {
+    display: flex;
+    flex-direction: column-reverse;
+}
+
+.selection-4 {
+    display: flex;
+    margin: 28px 0;
+    padding: 0 0 0 12px;
+    box-sizing: border-box;
+}
+
+.selection-2:nth-child(3) {
+    justify-content: flex-end;
+}
+
+.selection-price {
+    width: 100px;
+    font-size: 24px;
+    background-color: #ddd;
+    margin: 0;
+    display: flex;
+    padding-bottom: 4px;
+    box-sizing: border-box;
+}
+
+.selection-price > span {
+    align-items: center;
+    justify-content: center;
+}
+
+.selection-en {
+    width: 32px;
+    height: 32px;
+    /* background-color: #ddd; */
+    align-items: flex-end;
+    margin: 0;
+    font-size: 20px;
+}
+
+.selection-price-en {
+    height: 40px;
+    display: flex;
+}
+
+/* .selection-minus-container {
+    position: absolute;
+    top: 12px;
+    left: 20px;
+}
+
+.selection-plus-container {
+    position: absolute;
+    top: 12px;
+    right: 20px;
+} */
+
+.selection-minus,
+.selection-plus {
+    width: 60px;
+    height: 40px;
+    color: white;
+    font-size: 24px;
+    background-color: #868686;
+    margin: 0;
+    border-radius: 2px;
+    position: relative;
+}
+
+.selection-minus {
+    /* margin-left: auto; */
+    clip-path: polygon(0% 0%, 100% 0%, 50% 100%);
+}
+
+.selection-plus-container {
+    /* margin-right: auto; */
+    clip-path: polygon(50% 0%, 100% 100%, 0% 100%);
+}
+
+.selection-minus > span {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -60%);
+}
+
+.selection-plus > span {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -35%);
+}
+
+.selection-ko {
+    width: 32px;
+    height: 32px;
+    /* background-color: #ddd; */
+    margin: 0 4px 0 0;
+    font-size: 20px;
+    align-self: end;
+}
+
+.selection-num {
+    width: 48px;
+    height: 48px;
+    font-size: 32px;
+    background-color: #ddd;
+    margin: 0;
+    align-self: end;
+}
+
+.selection-send,
+.selection-cancel {
+    width: 64px;
+    height: 64px;
+    background-color: #ddd;
 }
 
 /* header */
